# Cpp_Exersices

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.cpp  sola.cpp
